[package]
name = "czas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
serde = { version = "1.0.192", features = ["serde_derive"] }
thiserror = "1.0.50"

[lib]
crate-type=["lib","cdylib"]
name = "czas"
test = true

[[example]]
name = "run"
path = "examples/run.rs"