[package]
name = "czas"
description = "Convert timestamps into localized text"
version = "0.0.1"
edition = "2021"
authors = ["Calem Roelofs"]
readme = "README.md"
homepage = "https://github.com/calemroelofs/czas"
repository = "https://github.com/calemroelofs/czas"
license = "MIT or Apache-2.0"
keywords = ["i18n","czas","localization","internationalization","polish","time","date","datetime","chrono"]
categories = ["date-and-time","internationalization","localization","value-formatting"]

[dependencies]
chrono = "0.4.31"
thiserror = "1.0.50"

[lib]
crate-type=["lib","cdylib"]
name = "czas"
test = true

[[bin]]
name = "czas-teraz"
path = "src/bin.rs"