[package]
name = "czas"
description = "Convert timestamps into localized text"
version = "0.0.3"
edition = "2021"
authors = ["Calem Roelofs"]
readme = "README.md"
homepage = "https://github.com/calemroelofs/czas"
repository = "https://github.com/calemroelofs/czas"
license = "MIT OR Apache-2.0"
keywords = ["i18n","czas","polish","datetime","chrono"]
categories = ["date-and-time","internationalization","localization","value-formatting"]
exclude = [
  ".github/*",
  "examples/*",
  "target/*",
  ".gitignore"
]

[dependencies]
chrono = "0.4.31"
thiserror = "1.0.50"

[lib]
crate-type=["lib","cdylib"]
name = "czas"
test = true

[[bin]]
name = "czas-teraz"
path = "src/bin.rs"
